I fixed directors and movies collection with their validation and error hangling
